[gd_scene load_steps=7 format=2]

[ext_resource path="res://audio/musica/Musica.gd" type="Script" id=1]
[ext_resource path="res://escenarios/menu_inicio/MenuInicio.gd" type="Script" id=2]
[ext_resource path="res://escenarios/menu_inicio/logo peladilla.png" type="Texture" id=3]
[ext_resource path="res://gui/fuentes/MountainsofChristmas-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://audio/musica/Peladillas en Insomnia Street Intro.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[node name="MenuInicio" type="Node2D"]
script = ExtResource( 2 )

[node name="LogoPeladilla" type="Sprite" parent="."]
position = Vector2( 492, 232 )
texture = ExtResource( 3 )

[node name="Musica" type="Node" parent="."]
script = ExtResource( 1 )

[node name="intro" type="AudioStreamPlayer" parent="Musica"]
stream = ExtResource( 5 )

[node name="loop" type="AudioStreamPlayer" parent="Musica"]
stream = ExtResource( 5 )

[node name="ButtonEmpezar" type="Button" parent="."]
margin_left = 370.0
margin_top = 419.0
margin_right = 643.0
margin_bottom = 482.0
rect_pivot_offset = Vector2( 226, 42 )
custom_fonts/font = SubResource( 1 )
text = "EMpezar"

[node name="ButtonEmpezar2" type="Button" parent="."]
margin_left = 662.0
margin_top = 519.0
margin_right = 863.0
margin_bottom = 582.0
rect_pivot_offset = Vector2( 226, 42 )
custom_fonts/font = SubResource( 1 )
text = "Instrucciones"

[node name="ButtonCreditos" type="Button" parent="."]
margin_left = 370.0
margin_top = 517.0
margin_right = 643.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 1 )
text = "CÃ©ditos"

[node name="ButtonSalir" type="Button" parent="."]
margin_left = 878.0
margin_top = 517.0
margin_right = 994.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 1 )
text = "Salir"

[connection signal="pressed" from="ButtonEmpezar" to="." method="_on_ButtonEmpezar_pressed"]
[connection signal="pressed" from="ButtonEmpezar2" to="." method="_on_ButtonEmpezar2_pressed"]
[connection signal="pressed" from="ButtonCreditos" to="." method="_on_ButtonCreditos_pressed"]
[connection signal="pressed" from="ButtonSalir" to="." method="_on_ButtonSalir_pressed"]
